# HansTheGatherer

./: CMakeLists.txt  LICENSE  NOTICE  README.md  assets.cpp  assets.hpp  audio.hpp  input.hpp  main.cpp  sprite.hpp  vcpkg.json
assets/sounds/: hit.raw  pickup.raw
cmake/: riscv-toolchain.cmake
code/: CMakeLists.txt  assets.cpp  assets.hpp  audio.cpp  definitions.hpp  level.cpp  level.hpp  main.cpp  minimal.cpp  physics.hpp  render.cpp  util.hpp
code/bitmaps/: basket.h  fruits.h  jungle.h  spiders.h
lib/: CMakeLists.txt
lib/Hall/: CMakeLists.txt  README.md
lib/Hall/include/Hall/: Audio.h  Hall.h  System.h  Video.h
lib/Hall/source/: Audio.cpp  System.cpp  Video.cpp
src/: assets.cpp  assets.hpp  audio.cpp  audio.hpp  definitions.hpp  input.hpp  level.cpp  level.hpp  main.cpp  physics.cpp  physics.hpp  render.cpp  render.hpp  sdl_types.hpp  sprite.hpp
wuehans/: CMakeLists.txt  start.S  syscall.c  wuehans_config.h
